<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@id/relaunch_premium_close_button"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_margin="12dp"
        android:alpha="0.5"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:padding="6dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ph_ic_close"
        app:tint="#828282"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/text_offer_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center_horizontal"
        android:paddingHorizontal="8dp"
        android:text="@string/ph_limited_time_offer"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="#1E1E1E"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@id/relaunch_premium_text_time"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="1sp"
        android:textSize="38sp"
        android:textStyle="bold"
        android:translationY="-0.52sp"
        app:layout_constraintTop_toBottomOf="@id/text_offer_title"
        tools:text="23:59:59" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="  DEBUG  \n LAYOUT "
        android:textAlignment="gravity"
        android:gravity="center"
        android:textSize="60sp"
        android:textStyle="bold"
        android:textColor="@color/light_grey"
        android:rotation="-45"
        android:lineSpacingExtra="20sp"
        android:letterSpacing="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/relaunch_premium_purchase_button"
        style="@style/PhCtaButton"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/ph_get_special_price"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tv_one_time_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="8sp"
        android:paddingHorizontal="8dp"
        android:text="@string/ph_one_time_payment"
        android:textColor="#1E1E1E"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/relaunch_premium_purchase_button" />

    <TextView
        android:id="@+id/tv_offer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="center_horizontal"
        android:paddingHorizontal="8dp"
        android:text="@string/ph_one_time_offer_name"
        android:textAllCaps="true"
        android:textColor="#1E1E1E"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/tv_one_time_payment" />

    <LinearLayout
        android:id="@+id/view_prices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/tv_offer_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@id/relaunch_premium_text_price_strike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.6"
            android:lineSpacingExtra="6sp"
            android:lines="1"
            android:fontFamily="sans-serif-medium"
            android:textColor="#828282"
            android:textSize="16sp"
            android:translationY="-3.09sp"
            android:visibility="visible"
            tools:text="22.99" />

        <TextView
            android:id="@id/relaunch_premium_text_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:lineSpacingExtra="6sp"
            android:lines="1"
            android:fontFamily="sans-serif-medium"
            android:textColor="#1E1E1E"
            android:textSize="16sp"
            android:translationY="-3.09sp"
            android:visibility="visible"
            tools:text="22.99" />

    </LinearLayout>

    <ProgressBar
        android:id="@id/relaunch_premium_progress"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_centerHorizontal="true"
        android:indeterminateTint="#828282"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/view_prices"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/view_prices"
        tools:ignore="UnusedAttribute" />

</androidx.constraintlayout.widget.ConstraintLayout>