<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="8dp"
    app:cardPreventCornerOverlap="true"
    tools:layout_margin="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ph_rate_dialog_background"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="42dp"
            android:paddingTop="30dp"
            android:paddingEnd="42dp"
            android:paddingBottom="24dp"
            android:text="@string/rate_dialog_title"
            android:textColor="@color/ph_text_dark"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@id/rate_dialog_dismiss_button"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_margin="8dp"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ph_ic_close"
            app:tint="@color/ph_black" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:gravity="center"
            android:paddingStart="42dp"
            android:paddingTop="8dp"
            android:paddingEnd="42dp"
            android:text="@string/rate_dialog_subtitle"
            android:textColor="@color/ph_text_dark"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <ImageView
            android:id="@id/rate_dialog_negative_button"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="36dp"
            android:layout_marginRight="24dp"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/subtitle"
            app:srcCompat="@drawable/ph_ic_thumb_down" />

        <ImageView
            android:id="@id/rate_dialog_positive_button"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="36dp"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/subtitle"
            app:srcCompat="@drawable/ph_ic_thumb_up" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:text="@string/rate_dialog_thanks"
            android:textColor="@color/ph_text_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rate_dialog_negative_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
